k8s/apps/prod/jpdesigns/admin-panel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jpdesigns-admin
  namespace: jpdesigns
spec:
  selector:
    matchLabels:
      app: jpdesigns-admin
  template:
    metadata:
      labels:
        app: jpdesigns-admin
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: jpdesigns-admin
          image: nexus.oplabs.us/gitlab/jp-designs-admin:19 # {"$imagepolicy": "flux-system:jpdesigns-admin"}
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          ports:
            - containerPort: 3000
