k8s/apps/prod/jpdesigns/admin-panel/oauth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-proxy
  namespace: jpdesigns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-proxy
  template:
    metadata:
      labels:
        app: oauth-proxy
    spec:
      containers:
        - name: oauth-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.13.0
          ports:
            - containerPort: 4180
          args:
            - --http-address=0.0.0.0:4180
            # - --redirect-url=https://auth.opryga.com/oauth2/callback
            - --reverse-proxy=true
            - --errors-to-info-log=true
            - --whitelist-domain=paintbyjpdesigns.com
            - --whitelist-domain=.paintbyjpdesigns.com
            - --cookie-secure=true
            - --cookie-domain=paintbyjpdesigns.com
            - --cookie-domain=.paintbyjpdesigns.com
            - --pass-access-token=true
            - --pass-authorization-header=true
            - --email-domain=*
            - --code-challenge-method=S256
            # - --cookie-expire=60s # Session cookie
            # - --cookie-refresh=0 # Not used by MS SSO
            # - --skip-provider-button=true
            # - --force-https=true
            # Enable all the logs
            - --standard-logging=true
            - --auth-logging=true
            - --request-logging=true
            - --set-xauthrequest=true
            # Testin some things out
            - --upstream=static://202
