k8s/apps/prod/jpdesigns/admin-panel/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jpdesigns-admin
  namespace: jpdesigns
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/href: "https://admin.paintbyjpdesigns.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "JP Designs Dashboard"
    gethomepage.dev/description: "Manage JP Designs projects"
    gethomepage.dev/group: "JP Designs"
    gethomepage.dev/icon: "nodejs.png"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`admin.paintbyjpdesigns.com`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        # - name: jpdesigns-admin-basicauth
        #   namespace: jpdesigns
        # - name: default-headers
        #   namespace: traefik
        - name: local-ip-list
          namespace: traefik
        - name: oauth-forward-auth
        - name: oauth-headers
          namespace: traefik
        # - name: crowdsec-bouncer
        #   namespace: traefik
      services:
        - name: jpdesigns-admin
          port: 3000
  tls:
    secretName: paintbyjpdesigns-tls # give it the ole tls cert
